--- a/festivalsql/festivalsql/Client/Shared/NavMenu.razor
+++ b/festivalsql/festivalsql/Client/Shared/NavMenu.razor
@@ -13,18 +13,18 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
             <NavLink class="nav-link" href="listusers">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Users
+                <span class="oi oi-people" aria-hidden="true"></span> Users
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="listjobs">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Jobs
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="listshifts">
+                <span class="oi oi-calendar" aria-hidden="true"></span> Shifts
             </NavLink>
         </li>
     </ul>
