--- a/festivalsql-15-12-2021/festivalsql/Client/Pages/Login.razor
+++ b/festivalsql-15-12-2021/festivalsql/Client/Pages/Login.razor
@@ -17,7 +17,7 @@
                 <label for="psw"><b>Password</b></label>
                 <input class="login_input" type="text" placeholder="Enter Password" name="psw" required>
 
-                <input type="submit" class="login_button" value="Login">
+                <input type="submit" class="login_button" value="Login" @onclick="Navigate">
                 <input type="reset" class="login_button" value="Nulstil">
 
                 @*<button class="login_button" @onclick="Navigate">Login</button>*@
@@ -33,6 +33,6 @@
 @code{
     private void Navigate()
     {
-        NavigationManager.NavigateTo("/WhenLoggedIn");
+        NavigationManager.NavigateTo("/");
     }
 }
